--- a/client/src/App.css
+++ b/client/src/App.css
@@ -120,6 +120,7 @@ input[type='number'] {
   position: relative;
   padding: 10px;
   margin: 10px 0;
+  text-transform: capitalize;
 }
 
 .list li.plus {
